# game

./: README.md  《醒狮跃境》系统设计分析书.md  《醒狮跃境》需求分析书v2.md  命名与注释规范.md
game-lion_animation3/lion/: .gitignore  Config.h  LevelSelect.cpp  LionAnimation.cpp  LionAnimation.h  menu.cpp
game-lion_animation3/lion/.trae/rules/: project_rules.md
lion/: AudioController.cpp  AudioController.h  CMakeLists.txt  Config.h  GameScene.cpp  GameScene.h  GameSettings.h  HelpPage.cpp  HelpPage.h  LevelData.cpp  LevelData.h  LevelEditor.cpp  LevelEditor.h  LevelManager.cpp  LevelManager.h  LevelSelect.cpp  LevelSelect.h  LionAnimation.cpp  LionAnimation.h  Pic.qrc  SettingsPage.cpp  SettingsPage.h  SplashScreen.cpp  SplashScreen.h  main.cpp  menu.cpp  menu.h  menu.ui  palyer.cpp  player.h
lion/data/: game_progress.json  progress.json  settings.cfg
lion/data/levels/: New Level.json  New Level1028.json  New Level111.json  demonstration.json  demonstration2.json  level_000.json  level_001.json  level_002.json  level_005.json  level_test_platforms.json  level_test_switches.json  testLevel.json
